Bios, homepage, project pages changes...
* bio page roles are H2s
* bio page post section only appears if updates about or essay posts by person exist
* added colors from vine-hands logo to stylesheet
* changed homepage newsletter background color because I don't like that cyan except for narrow shapes
* added a page collecting just update posts, and a "see all lab activity updates" link to the homepage under that feature section
* styles bio page contact boxes
* changes from gray to blue for project page stats boxes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ title: Home
 			<li>{{ post.content | markdownify}}</li>
 		{% endfor %}
 		</ul>
+	<a class="see-all" href="/updates/">See all lab activity updates</a>
     </div>
     <div id="upcoming-events">
         <h2>Upcoming Events</h2>
