All pages, consult staff photos, makerspace, use-the-lab...
* reduces tiled banner height on non-homepage pages, full and small widths
* fixes list bullets erroneously reintroduced in page staff photo loops
* fixes student techs on makerspace page formatting
* fixes map sizes linking to larger, makerspace and use-the-lab pages

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -51,13 +51,12 @@ order: 3
 	</div>
 	<div>
 	<h3>Map</h3>
-	<p>The Scholars' Lab Makerspace is on the 3rd floor of Edgar Shannon Library.</p>
-	<p><img src="/assets/img/makerspace/3rd-floor.png" alt="The Makerspace is located on the 3rd floor, East Wing, in the South end of the wing."/></p>
+	<p>The Scholars' Lab Makerspace is on the 3rd floor of Edgar Shannon Library, on the south end of Scholars' Lab. Click the map to view a larger version, or see a <a href="/use-the-lab">map showing where the Makerspace is</a> on the 3rd floor of Shannon.</p>
+	<p><a href="/assets/img/space-maps/SLab-Makerspace-Full.png"><img src="/assets/img/space-maps/SLab-Makerspace-Small.png" alt="The Makerspace is located on the 3rd floor, East Wing, in the South end of the wing; at the south end of Scholars' Lab."/></a></p>
 	</div>
 </section>
 
 <section id="newsletter">
-	<h2>Newsletter!</h2>
 	<p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">Makerspace newsletter</a>!</p>
 </section>
 
@@ -169,7 +168,7 @@ order: 3
 	</ul>
 </section>
 
-<section id="people">
+<section id="makerspace-staff">
 	<h2>Makerspace Technologists</h2>
  	<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
 	<ul>
@@ -179,25 +178,27 @@ order: 3
 		</li>
 	</ul>
  	<h3>Scholars&rsquo; Lab Staff Technologists</h3>
-		<ul>
-			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller"><br>
-				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a></span>: 3D Printing, Photogrammetry, Digital Humanities
-			</li>
-			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin"><br>
-				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a></span>: 3D Printing, Programming, Digital Humanities
-			</li>
-			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs"><br>
-				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a></span>: 3D Printing, Electronics, Programming, Digital Humanities
-			</li>
-			<li>
-				<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti"><br>
-				<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a></span>: Digital Humanities, resin casting</div>
-			</li>
-		</ul>
-<div id="student-technologists">
+	<ul>
+		<li>
+			<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller"><br>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a></span>: 3D Printing, Photogrammetry, Digital Humanities
+		</li>
+		<li>
+			<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin"><br>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a></span>: 3D Printing, Programming, Digital Humanities
+		</li>
+		<li>
+			<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs"><br>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a></span>: 3D Printing, Electronics, Programming, Digital Humanities
+		</li>
+		<li>
+			<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti"><br>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a></span>: Digital Humanities, resin casting
+		</li>
+	</ul>
+</section>
+
+<section id="makerspace-students">
 	<h3>Student Technologists</h3>
 	<ul>
 		<li><span>Link Fu:</span> Button Making, Stickers, Textiles, Crafting, Cosplay</li>
@@ -218,6 +219,6 @@ order: 3
 		<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing</li>
 		<li><span>Hans Yang:</span> 3D printing</li>
 	</ul>
-</div>
+</section>
 
 </section>
