--- a/pages/visit/use-the-lab.html
+++ b/pages/visit/use-the-lab.html
@@ -36,8 +36,8 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 <p>From the Memorial Hall entrance (4th floor), we're one flight down. From the new McCormick Road entrance (2nd floor), we're one floor up. The UVA Library provides <a href="https://library.virginia.edu/maps">directions to the building</a>, including a <a href="https://library.virginia.edu/sites/default/files/2024-01/Building_Guide.pdf">guide to the new Shannon building</a>.</p>
 
 <h4>Scholars' Lab Map</h4>
-
-<img src=/assets/img/space-maps/CroppedForWebsite_SLabMap.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="slab-map">
+<p>Click the map to view a larger version:</p>
+<a href="/assets/img/space-maps/SLab-Full.png"><img src="/assets/img/space-maps/SLab-Small.png" alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library"></a>
 
 <ul>
 <li>Green: public space</li>
@@ -46,8 +46,8 @@ var week2090 = new $.LibCalWeeklyGrid( $("#s-lc-whw2090"), { iid: 863, lid: 2090
 </ul>
 
 <h4>Shannon 3rd Floor Map</h4>
-
-<img src=/assets/img/space-maps/CroppedForWebsite_LayoutMap_3rdFloorShannon_SLab_HighLevel.png alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library" class="3rdFlr-map">
+<p>Click the map to view a larger version:</p>
+<a href="/assets/img/space-maps/ThirdFloor-Full.png"><img src="/assets/img/space-maps/ThirdFloor-Small.png" alt="A map showing Scholars' Lab's place on the 3rd floor of Shannon Library"></a>
 <!-- close div that contains linkable html anchor to hours info -->
 
 <h2>Spaces</h2>
