better /blog latest post styling & link fixes

--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@ title: Home
         learning, text analysis, and more. Our particular strengths lie in
         the critical pedagogical and scholarly application of those
         technologies for the humanities.</p>
-    <p><a href="/design-code">>>> DH Code + Design</a></p>
+    <p><a href="/code-design">>>> DH Code + Design</a></p>
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-code-and-design.png" alt="Decorative screenshot of Scholars' Lab fellows James Ascher and Sarah Berkowitz's digital textual research project completed with the lab">
-        <figcaption>Exploring literary texts through code and visualization. <span class="photo-byline">Image: James Ascher.</span></figcaption>
+        <figcaption>Exploring literary texts through code and visualization. <span class="photo-byline">Image: James Ascher, Sarah Berkowitz.</span></figcaption>
     </figure>
 </section>
 <section id="spatial-technologies" class="feature">
@@ -185,7 +185,7 @@ title: Home
             href="mailto:spatial@virginia.edu">spatial@virginia.edu</a> to
         schedule an individual consultation or course instruction session.
     </p>
-    <p><a href="/design-code">>>> Spatial Technologies</a></p>
+    <p><a href="/spatial-technologies">>>> Spatial Technologies</a></p>
     </div>
     <figure>
         <img src="/assets/img/decorative/lab-photos-decorative/homepage-spatialtechnologies.jpg" alt="Decorative photo of Scholars' Lab staff working with students outdoors and in museums capturing cutural heritage data">
