captioned 404.html image

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: 404.html
 
 <p>You've found a page that doesn't exist on our site. If you would like more help, please <a href="mailto:scholarslab@virginia.edu">email us</a> at ScholarsLab@Virginia.edu! (Sometimes pages and posts still exist but are at new addresses, or we can find the content for you in our archives.)</p>
 
-<p class="center-align"><img src="/assets/img/decorative/abstract-decorative/404-brandon-walsh-unicorn.jpeg" alt="Photo of a whiteboard drawing that is an ambiguous four-footed creation with a horn, distantly related to a unicorn?"></p>
+<p class="center-align"><img src="/assets/img/decorative/abstract-decorative/404-brandon-walsh-unicorn.jpeg" alt="Photo of a whiteboard drawing that is an ambiguous four-footed creation with a horn, distantly related to a unicorn?"><br><span class="photo-byline">Drawing by Brandon Walsh.</span></p>
 
 <h2>Help improve our site</h2>
 <p>Found a bug, a project missing a collaborator's name, or have a feature or content request for ScholarsLab.org? Please <a href="mailto:scholarslab@virginia.edu?subject=FromSLabSite404Page">email us</a> at ScholarsLab@Virginia.edu so we can follow up.</p>
