Spatial Tech text, updates, 404 fix...
* adds update for brandon's project release, past update for amanda's release
* fixes 404'ing project page; adjust so informatic vs informaticS is same across yaml/filename/assets, and redirect in place
* adds laura's updated spatial tech text
* removes /_past-posts collection (empty, unsure how/when i added this but shouldn't be here yet)

--- a/collections/_work/cultural-heritage-informatics-documentation.html
+++ b/collections/_work/cultural-heritage-informatics-documentation.html
@@ -10,15 +10,17 @@ collaborators:
     slug: brandon-walsh
     role: Head of Student Programs
 layout: work
-slug: cultural-heritage-informatic-documentation
+slug: cultural-heritage-informatics-documentation
 title: 3D Cultural Heritage Informatics Documentation
-thumb-img: cultural-heritage-informatic-documentation-thumb.png
-banner-img: cultural-heritage-informatic-documentation-banner.png
+thumb-img: cultural-heritage-informatics-documentation-thumb.png
+banner-img: cultural-heritage-informatics-documentation-banner.png
 research-category: Student
 start-year: 2019
 end-year: 2019
 redirect_from:
+  - /cultural-heritage-informatic-documentation
   - /cultural-heritage-informatics-documentation
+  - /work/cultural-heritage-informatic-documentation
 ---
 
 In 2019, the Scholars' Lab and UVA Library received funding from the <a href="https://uvaparents.virginia.edu/parents-fund/projects-funded/">UVA Parents Fund</a> to create documentation for working with augmented and virtual reality technologies on campus. 
