--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -6,7 +6,7 @@ collaborators:
 layout: work
 slug: zine-bakery
 title: "Zine Bakery @ Scholars' Lab"
-link: https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z
+link: https://zinebakery.com
 thumb-img: zinebakery-thumb.png
 banner-img: zinebakery-banner.png
 research-category: Internal Projects & Community Service
@@ -15,15 +15,21 @@ end-year: current
 ---
 <p>Amanda Wyatt Visconti maintains a collection of zines by authors and on topics of interest to them (Zine Bakery), a majority subset of which are also of interest to the Lab and its community (Zine Bakery & Scholars' Lab), including zines on feminist approaches to technology, digital scholarship tutorials, creativity and making, and social justice advocacy.</p>
 
-<img src="{{ site.url }}/assets/img/work/zinebakery-atslab.png" alt="Logo for the Zine Bakery @ Scholars' Lab subset of the Zine Bakery project">
+<p class="project-image"><img src="{{ site.url }}/assets/img/work/zinebakery-atslab.png" alt="Logo for the Zine Bakery @ Scholars' Lab subset of the Zine Bakery project"></p>
 
 <p>The Zine Bakery @Scholars' Lab  project includes:</p>
 <ul>
-<li>Copies of print zines distributed on a rack in SLab's Common Room public space</li>
+<li>Copies of print zines distributed on a rack in SLab's Common Room public space*</li>
 <li>A digital catalogue of zines, combining the zines we can distribute publicly with others we cannot distribute for various reasons (including only having a single non-reproducable copy in our collection, or zines purchased with staff personal funds).</li>
 <li>A subset of zine titles and metadata in the catalogue available via a public interface: <a href="https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z">Zine Bakery's public zine catalogue view</a></li>
 <li>An interest in collecting a copy of any zines authored by or about UVA and Charlottesville folks that the zines' authors wish to share (please email visconti@virginia.edu with a digital copy)</li>
 </ul>
+
+<p>A lot of the zines I’ve collected are available for reading online (as well as printing)—all <a href="https://airtable.com/appY7WyBFjSzLXQd6/shrVQlyCL7XZgeBrg/tbl88Svfsrkg3YV5Z">zines in this sub-collection</a> can be read online for free (see the “free e-reading” column for the links).</p>
+<p>* We often have zines available to take away for free, from a rack near the front entrance of Scholars' Lab's Common Room (Shannon 308). How many copies of how many different zines depends on how much free time I've had recently to print them and how quickly folks take them away, so your mileage may vary! If I know you'll be coming by at least a week before, I can often add some zines related to your interests to the rack for you.</p>
+<p> The zine rack location is starred on the map below:</p>
+
+<p class="project-image"><img class="project-image" src="/assets/img/space-maps/Shannon3rdFloor-ScholarsLab-ZineRackDirections.png" alt="Map of the 3rd floor of Shannon Library, with the location of the zine rack starred"></p>
 
 <h2>Timeline</h2>
 <ul>
