Work on #1082, start again alphabetically at LhasaVR fixing
projects that got redirects (and must be tested work okay, show images, redirect—DID NOT test locally yet):
- humanists guide to nlp
- august collecting
- 3d cultural heritage informatics DOCUMENTATION
- 3d cultural heritage informatics REPOSITORY

--- a/collections/_work/3D-chi.html
+++ b/collections/_work/3D-chi.html
@@ -8,8 +8,8 @@ layout: work
 slug: 3d-chi
 title: 3D Cultural Heritage Informatics Website
 link: https://wordpress.its.virginia.edu/Cultural_Heritage_Data//data-2/
-thumb-img: 3Dculturalheritageinformatics-thumb.png
-banner-img: 3Dculturalheritageinformatics-banner.jpg
+thumb-img: 3D-chi-thumb.png
+banner-img: 3D-chi-banner.jpg
 research-category: Collaborations
 start-year: (before 2018)
 end-year: current
