--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ title: Home
 <section id="about-us" class="feature">
     <div>
     <h2>About Us</h2>
-    <p>The Scholars' Lab is an interdisciplinary research lab for critical,
+    <p>Part of the Library’s <a href="https://library.virginia.edu/dh-center/">Digital Humanities Center</a>, the Scholars’ Lab
+        is an interdisciplinary research lab for critical,
         creative, and anti-oppressive explorations of the intersections of
         technology and culture. We offer mentoring, collaboration, and
         supportive space for anyone curious about pushing scholarly
