Adds photo to /work/zine-bakery

--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -17,6 +17,8 @@ end-year: current
 
 <p class="project-image"><img src="{{ site.url }}/assets/img/work/zinebakery-atslab.png" alt="Logo for the Zine Bakery @ Scholars' Lab subset of the Zine Bakery project"></p>
 
+<p class="project-image"><img src="{{ site.url }}/assets/img/work/zinebakery-atslab-rack.png" alt="Photo of the rack holding Zine Bakery @ Scholars' Lab zines in SLab's Common Room"></p>
+
 <p>The Zine Bakery @Scholars' Lab  project includes:</p>
 <ul>
 <li>Copies of print zines distributed on a rack in SLab's Common Room public space*</li>
