Adds sentence description at head of UVA collab list

--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -40,6 +40,7 @@ redirect_from:
 	<div class="collaborations">
 	<!-- Capture & markdownify code below allows us to manage the file as markdown (easier to add to list), but display within this HTML page as HTML.-->
 	<h3>Our collaborators at UVA</h3>
+		Schools, departments, and other major groups we've collaborated with and supported, at the University of Virginia.
 		<!-- See /_includes/_content-includes for the editable file containing the list of places we've worked on campus-->
 	{% capture uva-areas %}{% include _content-includes/uva-areas.md %}{% endcapture %}
 	{{ uva-areas | markdownify }}
