--- a/pages/consult/spatial-technologies/spatial-technologies.html
+++ b/pages/consult/spatial-technologies/spatial-technologies.html
@@ -38,7 +38,7 @@ redirect_from:
 	<h3>Contact us</h3>
 		<ul>
 			<li>Staff: <a href="/people/will-rourk">Will Rourk</a> and <a href="/people/arin-bennett">Arin Bennett</a></li>
-			<li>Office: Shannon Library, Room 308 G</li>
+			<li>Office: Shannon Library, Room 308 G (Will), H (Arin)</li>
 			<li>Hours: by appointment</li>
 			<li>Email <a href="mailto:spatial@virgina.edu">spatial@virgina.edu</a> to discuss a project or schedule a consultation.</li>
 		</ul>
