--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -21,8 +21,8 @@ redirect_from:
 		<section class="events-gallery__item">
 			<h3><a href="/events/{{ event.slug }}">{{ event.title }}</a></h3>
 			<!-- remove trailing seconds zeros on time -->
-			{% assign start_time = event.start_time | date: "%r" | remove: ":00 " %}
-			{% assign end_time = event.end_time | date: "%r" | remove: ":00 " %}
+			{% if event.start_time %}{% assign start_time = event.start_time | date: "%r" | remove: ":00 " %}{% endif %}
+			{% if event.end_time %}{% assign end_time = event.end_time | date: "%r" | remove: ":00 " %}{% endif %}
 			<!-- check for leading zero -->
 			{% assign zerocheck1 = start_time | slice: 0 %}
 			{% assign zerocheck2 = end_time | slice: 0 %}
@@ -34,11 +34,11 @@ redirect_from:
 				{% assign end_time = end_time | slice: 1, 6 %}
 			{% endif %}
 			<div class="events-item__logistics">
-				<div class="events-logistics__time"><span>When: </span>{{ event.start_date | date: "%A, %B %-d, %Y" }}, {{ start_time }}-{{ end_time }}</div>
+				<div class="events-logistics__time"><span>When: </span>{{ event.start_date | date: "%A, %B %-d, %Y" }}{% if event.start_time %}, {{ start_time }}-{{ end_time }}{% endif %}</div>
 				<div class="events-logistics__place"><span>Where: </span>{{ event.location }}</div>
 			</div>
 			<div class="events-item__cta">
-				<a href="/events/{{ event.slug }}">Details &rsaquo;</a>
+				<a href="/events/{{ event.path }}">Details &rsaquo;</a>
 			</div>
 		</section>
 	{% endif %}
