Return of the slugs...
Slugs are easier. Returns slugs to /events YAML, corrects all upcoming events

--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -38,7 +38,7 @@ redirect_from:
 				<div class="events-logistics__place"><span>Where: </span>{{ event.location }}</div>
 			</div>
 			<div class="events-item__cta">
-				<a href="/events/{{ event.path }}">Details &rsaquo;</a>
+				<a href="/events/{{ event.slug }}">Details &rsaquo;</a>
 			</div>
 		</section>
 	{% endif %}
