Missing e in section title (unrelated to section link not working?)

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -60,7 +60,7 @@ order: 3
 	<p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">Makerspace newsletter</a>!</p>
 </section>
 
-<section id="makerspace-resourcs">
+<section id="makerspace-resources">
 	<h2>Makerspace Resources</h2>
 	<h3>Using the Makerspace</h3>
 	<p>The Makerspace is open to all UVA students, staff and faculty, as well as the general public. We hope you will find the equipment, resources, and support to help you MAKE anything (within reason) you want to make.</p>
