--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -35,7 +35,7 @@ order: 3
 <section class="hours-and-location">
 	<h2>Hours + Location</h2>
 	<div>
-	<h3>Open Hours + Access</h3>
+	<h3 id="hours">Open Hours + Access</h3>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script>
 	<div id="s-lc-whw2093"></div>
